dropdown-menus with scrollbars, fixed background gradient

--- a/css/style.css
+++ b/css/style.css
@@ -186,11 +186,13 @@ iframe{
   min-width: 70px;
   margin-top: 10px;
 }
-.dropdown-menu{
+.dropdown-menu {
   right: 0;
   left: auto;
   min-width: 55px;
   max-width: 200px;
+  max-height: 420px;
+  overflow-y: auto;
 }
 .dropdown-menu li a{
   padding: 5px 20px 5px 20px;
